# usb-router

./: README.md  package.nix  pyproject.toml  run-shell.bash  schema.json  shell.nix
src/devicerouter/: protocol.py  schema.py
src/devicerouter/cli/: gui_vm.py  host.py
src/devicerouter/gui/: app_qt5.py  registry.py  widgets.py
src/devicerouter/host/: service.py
src/devicerouter/transports/: filetest.py  vsock.py
